log
Fri Apr 17 12:38:32 AM UTC 2026: 
 tests:  0|7
total_score: 0/60
e6b8c6b
Fri Apr 17 12:54:30 AM UTC 2026: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
8d2c47d
Fri Apr 17 12:55:04 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9013e10
Fri Apr 17 01:12:03 AM UTC 2026: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:56:30: error: statement with no effect [-Werror=unused-value]
   56 |             mapa->buckets[i] == NULL;
      |                              ^
cc1: all warnings being treated as errors
03461ea
Fri Apr 17 01:12:29 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
066f5d2
Fri Apr 17 01:30:58 AM UTC 2026: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|0
cc87378
Fri Apr 17 01:33:49 AM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
e861728
Fri Apr 17 01:41:47 AM UTC 2026: 
 hashmap.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  5|4
total_score: 20/60
7fd53e6
Fri Apr 17 02:07:35 AM UTC 2026: 
 hashmap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
9a48fd4
Fri Apr 17 02:13:54 AM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 20/60
db30f31
Fri Apr 17 02:25:56 AM UTC 2026: 
 hashmap.c | 14 +++++---------
 1 file changed, 5 insertions(+), 9 deletions(-)
 tests:  8|3
total_score: 30/60
3e81357
Fri Apr 17 03:05:54 AM UTC 2026: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
76e2907
Fri Apr 17 03:06:59 AM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 40/60
833fd60
Fri Apr 17 03:31:39 AM UTC 2026: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 40/60
17f25e0
Fri Apr 17 03:33:40 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘firstMap’:
hashmap.c:139:37: error: expected ‘;’ before numeric constant
  139 |     for(int i = 0; i < map->capacity 1; i++)
      |                                     ^~
      |                                     ;
014bc35
Fri Apr 17 03:36:33 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 40/60
cabd1ee
Fri Apr 17 03:36:56 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 40/60
f7a86c7
Fri Apr 17 03:41:22 AM UTC 2026: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 40/60
f6c024d
